# xsocket

./: .containerignore  .gitignore  Containerfile  PKGBUILD  README.md  address.c  address.h  bind.c  cleanup.c  cleanup.h  connect.c  connect.h  hook.c  hook.h  meson.build  mypy.ini  option.c  option.h  protocol.c  protocol.h  server.c  server.h  socket.c  socket.h  switch.c  switch.h  system.h  xsocket.c  xsocket.h  xsocket.py  xsocket.service  xsocket.sysusers  xsocket.tmpfiles
